bulk execution enhancement, task 4